Changelog
=========
[Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]

0.30-dev - (unreleased)
-----------------------
 * Cleanup: of pyflakes warnings [ichimdav #4141]
 * Cleanup: of pylint violations [ichimdav #4140]
 * Change: use the --quiet flag when running setup sdist on manual-upload operations [tiberich]
 * Bug fix: print steps and instructions when exiting because of error [tiberich]

0.29 - (2010-12-10)
-------------------
 * Bug fix: fixed a bug when processing personal configuration file with no entries for current package [tiberich]
 * Bug fix: fixed printing messages when running in offline mode [tiberich]
 * Feature: allow processing of history files that have revision numbers of versions for releases [tiberich]

0.28 - (2010-11-25)
-------------------
 * Bug fix: always install collective.dist, even when running in --no-network mode [tiberich]

0.27 - (2010-11-22)
-------------------
 * Feature: allow custom configuration in ~/.eggmonkey [tiberich]
 * Change: Use -q (quiet) flag when running mkrelease and easy_install [tiberich #3858]

0.26 - (2010-11-19)
-------------------
 * Bug fix: fix bug in releasing egg with -u switch [tiberich]

0.25 - (2010-11-16)
-------------------
 * Feature: use collective.dist to check for package metadata validity [tiberich #3851]
 * Feature: now you can specify multiple repositories to register and upload egg [tiberich #3850]
 * Change: use exception raising for exiting the program [tiberich]

0.24 - (2010-11-11)
-------------------
 * Bug fix: improved history file whiteline detection [tiberich #3807]
 * Bug fix: made svn up only execute when network operations are allowed [tiberich #3807]

0.23 - (2010-11-10)
-------------------
 * Change: Improve svn commit message when changing version to -dev [tiberich #3807]

0.22 - (2010-11-10)
-------------------
 * Change: Add tests for version incrementing [tiberich #3807]
 * Bug fix: Improve algorithm for version incrementing, now we also look at -svn versions [tiberich #3807]